# drugregistry.documents

./: .env.example  .gitignore  PROMPT_AUGMENTATION.md  README.md  pyproject.toml
documents/parsed/: 1-102421.md  1-102421.tesseract.md  1-71002.md  1-71002.tesseract.md  11-100064_2016-06-07.tesseract.md  11-10012.tesseract.md  11-10012_2017-12-04.tesseract.md  11-1002_2019-11-02.md  11-10034.md  11-100422.tesseract.md  11-100452.md  11-100492.md  11-100512_2016-04-11.md  11-10082_2017-04-05.md  11-101413_2016-04-05.md  11-101691.md  11-102091.md  11-102401.md  11-10252.md  11-102571.md  11-102762.md  11-102772.md  11-102903.md  11-10302_2023-04-08.md  11-103163_2019-11-12.md  11-103173_2019-11-12.md  11-103183.md  11-1032.md  11-103203_2019-11-12.md  11-103303.md  11-103323_2019-11-12.md  11-103333_2019-11-12.md  11-103622_2025-08-10.md  11-103671.md  11-103681_2022-11-11.md  11-103701_2022-11-11.md  11-104182_2016-10-05.md  11-104261_2024-06-09.md  11-104271_2024-06-09.md  11-104704.md  (+1844 more)
scripts/: augment_documents.py  cleanup_empty_docs.py  download_manuals.py  parse_documents.py
